find and replace Blobifier

--- a/Config/SW Only Blobifier.cfg
+++ b/Config/SW Only Blobifier.cfg
@@ -9,7 +9,7 @@
 #                      purge_volumes matrix or variable_purge_length
 #PURGE_RET=[float]    (optional) The length to retract between moves
 #
-[gcode_macro BLOBIFIER]
+[gcode_macro RPMR]
 # These parameters define your filament purging. The retract variable is used to retract 
 # right after purging to prevent unnecessary oozing. Some filament are particularly oozy 
 # and may continue to ooze out of the nozzle for a second or two after retracting. Update 
@@ -182,7 +182,7 @@ gcode:
 
   # General state
  
-  SAVE_GCODE_STATE NAME=BLOBIFIER_state
+  SAVE_GCODE_STATE NAME=RPMR_state
 
   # Part cooling fan
   {% if part_cooling_fan >= 0 %}
@@ -201,11 +201,11 @@ gcode:
   # ======================================================================================
   
   #{% if "xyz" not in printer.toolhead.homed_axes %}
-#    {action_raise_error("BLOBIFIER: Not homed! Home xyz first")}
+#    {action_raise_error("RPMR: Not homed! Home xyz first")}
  # {% endif %}
   
 #  {% if printer.quad_gantry_level and printer.quad_gantry_level.applied == False %}
-#    {action_raise_error("BLOBIFIER: QGL not applied!")}
+#    {action_raise_error("RPMR: QGL not applied!")}
 #  {% endif %}
 
 # Replaced above with this from Cam's ENSURE_HOMED macro  
@@ -230,9 +230,9 @@ gcode:
   {% set filament_cross_section = (filament_diameter/2) ** 2 * 3.1415 %}
   {% set from_tool = printer.mmu.last_tool %}
   {% set to_tool = printer.mmu.tool %}
-  {% set bl_count = printer['gcode_macro _BLOBIFIER_COUNT'] %}
+  {% set bl_count = printer['gcode_macro _RPMR_COUNT'] %}
   {% set pos = printer.gcode_move.gcode_position %}
-  {% set restore_z = [printer['gcode_macro BLOBIFIER_PARK'].restore_z,pos.z]|max %}
+  {% set restore_z = [printer['gcode_macro RPMR_PARK'].restore_z,pos.z]|max %}
   {% set pos_max = printer.toolhead.axis_maximum %}
 #  {% set position_y = pos_max.y %}
   {% set position_y = 40 %}  # gpw - was 32, trying to move away from adjacent 2020 extrusion that blobs rest on
@@ -246,31 +246,31 @@ gcode:
   # ======================================================================================
 
   {% if params.PURGE_LENGTH %} # ======= PARAM PURGE LENGTH ==============================
-    {action_respond_info("BLOBIFIER: param PURGE_LENGTH provided")}
+    {action_respond_info("RPMR: param PURGE_LENGTH provided")}
     {% set purge_len = params.PURGE_LENGTH|float %}
   {% elif from_tool == to_tool %} # ==== TOOL DIDN'T CHANGE ==============================
-    {action_respond_info("BLOBIFIER: Tool didn't change (T%s > T%s), " ~ 
+    {action_respond_info("RPMR: Tool didn't change (T%s > T%s), " ~ 
       "priming" if purge_length_minimum else "skipping"  % (from_tool, to_tool))}
     {% set purge_len = 0 %}
   {% elif pv %} # ====================== FECTH FROM SLICER ===============================
     {% if from_tool < 0 and to_tool >= 0%}
-      {action_respond_info("BLOBIFIER: from tool unknown. Finding largest value for T? > T%d" % to_tool)}
+      {action_respond_info("RPMR: from tool unknown. Finding largest value for T? > T%d" % to_tool)}
       {% set purge_vol = pv|map(attribute=to_tool)|max %}
     {% elif to_tool < 0 %}
-      {action_respond_info("BLOBIFIER: tool(s) unknown. Finding largest value")}
+      {action_respond_info("RPMR: tool(s) unknown. Finding largest value")}
       {% set purge_vol = pv|map('max')|max %}
     {% else %}
       {% set purge_vol = pv[from_tool][to_tool]|float * purge_length_modifier %}
-      {action_respond_info("BLOBIFIER: Swapped T%s > T%s" % (from_tool, to_tool))}
+      {action_respond_info("RPMR: Swapped T%s > T%s" % (from_tool, to_tool))}
     {% endif %}
     {% set purge_len = purge_vol / filament_cross_section + purge_length_addition %}
   {% else %} # ========================= USE CONFIG VARIABLE =============================
-    {action_respond_info("BLOBIFIER: No toolmap or PURGE_LENGTH. Using default")}
+    {action_respond_info("RPMR: No toolmap or PURGE_LENGTH. Using default")}
     {% set purge_len = purge_length|float %}
   {% endif %}
   # ==================================== APPLY PURGE MINIMUM =============================
   {% set purge_len = [purge_len,purge_length_minimum]|max %}
-  {action_respond_info("BLOBIFIER: Purging %.2fmm of filament" % (purge_len|float))}
+  {action_respond_info("RPMR: Purging %.2fmm of filament" % (purge_len|float))}
 
   # ======================================================================================
   # ==================== PURGING SEQUENCE ================================================
@@ -384,7 +384,7 @@ gcode:
 	G0 X12.0 F10000  # move right of blob
         G90 # absolute positioning
         G0 X19 Y32 Z0.5 F10000 
-        G1 E0.4 F100  ;detract
+        G1 E0.4 F100  ;unretract
 # 	G4 P1000  #pause for 1 second for solidification
 	G0 X0 Y45 Z1 F10000   # move Diagonally left and back to knock-off blob
 #	G0 X0 Y45 Z0.3 F10000; lower Z to shear purge with edge of plate
@@ -401,7 +401,7 @@ gcode:
 
 
         # Keep track of the # of blobs
-        _BLOBIFIER_COUNT
+        _RPMR_COUNT
       {% endif %}
     {% endfor %}
   {% endif %}
@@ -421,7 +421,7 @@ gcode:
   
   M220 S{backup_feedrate * 100}
   
-  RESTORE_GCODE_STATE NAME=BLOBIFIER_state 
+  RESTORE_GCODE_STATE NAME=RPMR_state 
 
 
 
@@ -429,17 +429,17 @@ gcode:
 ##########################################################################################
 # Park the nozzle on the tray to prevent oozing during filament swaps. Place this 
 # extension in the pre-unload extension in mmu_macro_vars.cfg:
-#   variable_user_pre_unload_extension: "BLOBIFIER_PARK"
+#   variable_user_pre_unload_extension: "RPMR_PARK"
 #
-[gcode_macro BLOBIFIER_PARK]
+[gcode_macro RPMR_PARK]
 variable_restore_z: 0
 gcode:
-  {% set bl = printer['gcode_macro BLOBIFIER'] %}
+  {% set bl = printer['gcode_macro RPMR'] %}
   {% set pos = printer.gcode_move.gcode_position %}
   {% set pos_max = printer.toolhead.axis_maximum %}
   {% set position_y = pos_max.y %}
 
-  SET_GCODE_VARIABLE MACRO=BLOBIFIER_PARK VARIABLE=restore_z VALUE={pos.z}
+  SET_GCODE_VARIABLE MACRO=RPMR_PARK VARIABLE=restore_z VALUE={pos.z}
 
   SAVE_GCODE_STATE NAME=blobifier_park_state
   
@@ -474,66 +474,66 @@ gcode:
  with 1 and check if the bucket is full. Pause 
 # the printer if it is.
 #
-[gcode_macro _BLOBIFIER_COUNT]
+[gcode_macro _RPMR_COUNT]
 # Don't change these variables
 variable_current_blobs: 0
 variable_last_shake: 0
 variable_next_shake: 0
 gcode:
-  {% set bl = printer['gcode_macro BLOBIFIER'] %}
-  {% set count = printer['gcode_macro _BLOBIFIER_COUNT'] %}
-  SET_GCODE_VARIABLE MACRO=_BLOBIFIER_COUNT VARIABLE=current_blobs VALUE={current_blobs + 1}
-    _BLOBIFIER_SAVE_STATE
-    {action_respond_info("BLOBIFIER: Blobs in bucket: %s." 
+  {% set bl = printer['gcode_macro RPMR'] %}
+  {% set count = printer['gcode_macro _RPMR_COUNT'] %}
+  SET_GCODE_VARIABLE MACRO=_RPMR_COUNT VARIABLE=current_blobs VALUE={current_blobs + 1}
+    _RPMR_SAVE_STATE
+    {action_respond_info("RPMR: Blobs in bucket: %s." 
       % (current_blobs + 1))}
 ##########################################################################################
 # Reset the blob count to 0
 #
-[gcode_macro _BLOBIFIER_COUNT_RESET]
+[gcode_macro _RPMR_COUNT_RESET]
 gcode:
-  SET_GCODE_VARIABLE MACRO=_BLOBIFIER_COUNT VARIABLE=current_blobs VALUE=0
-  _BLOBIFIER_SAVE_STATE
+  SET_GCODE_VARIABLE MACRO=_RPMR_COUNT VARIABLE=current_blobs VALUE=0
+  _RPMR_SAVE_STATE
 
 
 
 ##########################################################################################
 # Some sanity checks
 #
-[delayed_gcode BLOBIFIER_INIT]
+[delayed_gcode RPMR_INIT]
 initial_duration: 5.0
 gcode:
-  _BLOBIFIER_INIT
+  _RPMR_INIT
 
-[gcode_macro _BLOBIFIER_INIT]
+[gcode_macro _RPMR_INIT]
 gcode:
-  {% set bl = printer['gcode_macro BLOBIFIER'] %}
+  {% set bl = printer['gcode_macro RPMR'] %}
   {% set raise_z_min = (bl.iteration_z_raise - ((bl.max_iterations_per_blob - 1) * (bl.max_iterations_per_blob) / 2) * bl.iteration_z_change) %}
   
   # No drop on purging
   {% if raise_z_min < 0 %} 
-    {action_emergency_stop("BLOBIFIER: Your current blob settings cause the nozzle to drop on the final iteration(s). increase iteration_z_raise or decrease either iteration_z_change or max_iterations_per_blob.")}
+    {action_emergency_stop("RPMR: Your current blob settings cause the nozzle to drop on the final iteration(s). increase iteration_z_raise or decrease either iteration_z_change or max_iterations_per_blob.")}
   {% endif %}
 
   # Valid part cooling fan setting
   {% if bl.part_cooling_fan != -1 and (bl.part_cooling_fan < 0 or bl.part_cooling_fan > 1) %}
-    {action_emergency_stop("BLOBIFIER: Value %f is invalid for variable part_cooling_fan. Either -1 or a value from 0 .. 1 is valid." % (bl.part_cooling_fan))}
+    {action_emergency_stop("RPMR: Value %f is invalid for variable part_cooling_fan. Either -1 or a value from 0 .. 1 is valid." % (bl.part_cooling_fan))}
   {% endif %}
 
   {% if printer.mmu %}
     {% if printer['gcode_macro _MMU_SEQUENCE_VARS'].restore_xy_pos %}
-      {action_respond_info("BLOBIFIER: If not using a wipe tower, consider disabling restore_xy_pos in mmu_macro_vars.cfg")}
+      {action_respond_info("RPMR: If not using a wipe tower, consider disabling restore_xy_pos in mmu_macro_vars.cfg")}
     {% endif %}
 
     # Blobifier park enabled
-    {% if printer['gcode_macro _MMU_SEQUENCE_VARS'].user_pre_unload_extension == "BLOBIFIER_PARK" %}
+    {% if printer['gcode_macro _MMU_SEQUENCE_VARS'].user_pre_unload_extension == "RPMR_PARK" %}
 
       # MMU park is enabled
       {% if printer['gcode_macro _MMU_SEQUENCE_VARS'].enable_park %}
-        {action_respond_info("BLOBIFIER: MMU park is enabled in mmu_macro_vars.cfg. This could interfere with BLOBIFIER_PARK")}
+        {action_respond_info("RPMR: MMU park is enabled in mmu_macro_vars.cfg. This could interfere with RPMR_PARK")}
         
         # MMU Park after form tip is enabled
         {% if printer['gcode_macro _MMU_SEQUENCE_VARS'].park_after_form_tip %}
-          {action_respond_info("BLOBIFIER: MMU park_after_form_tip in mmu_macro_vars.cfg is enabled and could interfere with BLOBIFIER_PARK")}
+          {action_respond_info("RPMR: MMU park_after_form_tip in mmu_macro_vars.cfg is enabled and could interfere with RPMR_PARK")}
         {% endif %}
       {% endif %}
 
@@ -542,38 +542,38 @@ gcode:
 
         # Restore position after CUT disabled
         {% if not printer['gcode_macro _MMU_CUT_TIP_VARS'].restore_position %}
-          {action_respond_info("BLOBIFIER: _MMU_CUT_TIP restore_position in mmu_macro_vars.cfg is disabled, this disables BLOBIFIER_PARK's use")}
+          {action_respond_info("RPMR: _MMU_CUT_TIP restore_position in mmu_macro_vars.cfg is disabled, this disables RPMR_PARK's use")}
         {% endif %}
     
         # Tray_top too low
         {% if bl.tray_top <= 0.2 %}
-          {action_emergency_stop("BLOBIFIER: Both BLOBIFIER_PARK and _MMU_CUT_TIP are enabled, but the tray_top is too low (< 0.2). This will cause the nozzle to run into the bed during cutting")}
+          {action_emergency_stop("RPMR: Both RPMR_PARK and _MMU_CUT_TIP are enabled, but the tray_top is too low (< 0.2). This will cause the nozzle to run into the bed during cutting")}
         {% endif %}
     
       {% endif %}
     
     # Blobifier enabled, but Blobifier_park isn't
-    {% elif printer['gcode_macro _MMU_SEQUENCE_VARS'].user_post_load_extension == 'BLOBIFIER' %}
-      {action_respond_info("BLOBIFIER: Consider setting user_pre_unload_extension in mmu_macro_vars.cfg to BLOBIFIER_PARK")}
+    {% elif printer['gcode_macro _MMU_SEQUENCE_VARS'].user_post_load_extension == 'RPMR' %}
+      {action_respond_info("RPMR: Consider setting user_pre_unload_extension in mmu_macro_vars.cfg to RPMR_PARK")}
     {% endif %}
   {% endif %}
 
 
-[delayed_gcode BLOBIFIER_LOAD_STATE]
+[delayed_gcode RPMR_LOAD_STATE]
 initial_duration: 2.0 # Give it some time to boot up
 gcode:
   {% set sv = printer.save_variables.variables.blobifier %}
 
   {% if sv %}
     # Restore state
-    SET_GCODE_VARIABLE MACRO=_BLOBIFIER_COUNT VARIABLE=last_shake VALUE={sv.last_shake}
-    SET_GCODE_VARIABLE MACRO=_BLOBIFIER_COUNT VARIABLE=current_blobs VALUE={sv.current_blobs}
+    SET_GCODE_VARIABLE MACRO=_RPMR_COUNT VARIABLE=last_shake VALUE={sv.last_shake}
+    SET_GCODE_VARIABLE MACRO=_RPMR_COUNT VARIABLE=current_blobs VALUE={sv.current_blobs}
   {% endif %}
-  _BLOBIFIER_CALCULATE_NEXT_SHAKE
+  _RPMR_CALCULATE_NEXT_SHAKE
 
-[gcode_macro _BLOBIFIER_SAVE_STATE]
+[gcode_macro _RPMR_SAVE_STATE]
 gcode:
-  {% set count = printer['gcode_macro _BLOBIFIER_COUNT'] %}
+  {% set count = printer['gcode_macro _RPMR_COUNT'] %}
   {% set sv = {'current_blobs': count.current_blobs, 'last_shake': count.last_shake} %}
   SAVE_VARIABLE VARIABLE=blobifier VALUE="{sv}"
 
