formatting comments, variables

--- a/Config/RPMR.cfg
+++ b/Config/RPMR.cfg
@@ -33,30 +33,31 @@ variable_purge_spd: 400                 # Speed, in mm/min, of the purge.
 variable_purge_temp_min: 200            # Minimum nozzle purge temperature.
 
 # These parameters define your scrubbing, travel speeds, safe z clearance and how many
-# times you want to wipe. Update as necessary.
-variable_flick_qty:             2          # Number of complete (A complete wipe:
-                                           # right, left) wipes.
-variable_travel_spd_xy:      6000          # Travel (not cleaning) speed along x and
-                                           #   y-axis in mm/min.
-variable_travel_spd_z:       1500          # Travel (not cleaning) speed along z axis
-                                           #   in mm/min.
-variable_flick_spd_x:       12000          # Nozzle wipe speed in mm/min.
-
+# times you want to flick. Update as necessary.
+variable_travel_spd_xy:      6000         # Travel speed along x-axis in mm/min.
+variable_travel_spd_z:       1500         # Travel speed along z axis in mm/min.
+variable_flick_qty:             2         # Number of flicks.
+variable_flick_spd_x:       12000         # Nozzle wipe speed in mm/min.
 variable_flick_dwell_time:    100
 
-# RPMR sends the toolhead to the maximum y position during purge operations and
-# minimum x position during shake operations. This can cause issues when skew correction 
-# is set up. If you have skew correction enabled and get 'move out of range' errors 
-# regarding rpmr while skew is enabled, try increasing this value. Keep the 
+# The acceleration to use when using the flick action. If set to 0, it uses the already 
+# set acceleration. However, in some cases this is not desirable for the last motion 
+# could be an 'outer contour' acceleration which is usually lower.
+variable_flick_accel: 0
+
+# RPMR sends the toolhead to the maximum x position during purge operations.
+# This can cause issues when skew correction is set up. 
+# If you have skew correction enabled and get 'move out of range' errors 
+# regarding RPMR while skew is enabled, try increasing this value. Keep the 
 # adjustments small though! (0.1mm - 0.5mm) and increase it until it works.
 # TODO set to 0, candidate for removal
 variable_skew_correction: 0.0
 
-# Location of where to purge.
+# Location of where to purge, and the pull-off position for flicking.
 variable_purge_x: 254.8
 variable_flick_x: 243
 
-# Height of the RPM mechanism 
+# Z distance to safely clear the RPM mechanism 
 variable_rpm_z_clearance: 16
 
 
@@ -64,11 +65,7 @@ variable_rpm_z_clearance: 16
 # ==================== BLOB TUNING =======================================================
 # ========================================================================================
 
-
-# Lift the nozzle slightly after creating the blob te release pressure on the tray.
-variable_eject_hop: 1.0
-
-# Dwell time (ms) after purging and before cleaning to relieve pressure from the nozzle.
+# Dwell time (ms) after purging and before flicking to relieve pressure from the nozzle.
 variable_pressure_release_time: 1000
 
 # Set the part cooling fan speed. Disabling can help prevent the nozzle from cooling down 
@@ -78,7 +75,6 @@ variable_pressure_release_time: 1000
 #variable_part_cooling_fan:  0              # Disable the fan
 variable_part_cooling_fan:  1               # Run it at full speed
 
-
 # ========================================================================================
 # ==================== PURGE LENGTH TUNING ===============================================
 # ========================================================================================
@@ -87,7 +83,7 @@ variable_part_cooling_fan:  1               # Run it at full speed
 # nozzle before printing
 variable_purge_length_minimum: 30
 
-# The maximum amount of filament (in mm¹) to purge in a single blob. RPMR will 
+# The maximum amount of filament (in mm) to purge in a single blob. RPMR will 
 # automatically purge multiple blobs if the purge amount exceeds this.
 variable_purge_length_maximum: 60
 
@@ -304,15 +300,12 @@ gcode:
     
     M220 S{(backup_feedrate * 100)|int}
   {% endif %}
-
-  # Retract the tray
-  #RPMR_SERVO POS=in
   
   RESTORE_GCODE_STATE NAME=RPMR_state 
 
 
 ##########################################################################################
-# Wipes the nozzle on whatever is pinched behind the cage, and flicks the blob
+# Wipes the nozzle on whatever is pinched between cage and arm, and flicks the blob
 #
 [gcode_macro RPMR_CLEAN]
 gcode:
@@ -336,8 +329,8 @@ gcode:
   {% set restore_z = [printer['gcode_macro RPMR_PARK'].restore_z,pos.z]|max %}
   {% set n_flicks = params.N|default(1)|int %}
 
-  {% if rpmr.brush_accel > 0 %}
-    SET_VELOCITY_LIMIT ACCEL={rpmr.brush_accel} MINIMUM_CRUISE_RATIO=0.1
+  {% if rpmr.flick_accel > 0 %}
+    SET_VELOCITY_LIMIT ACCEL={rpmr.flick_accel} MINIMUM_CRUISE_RATIO=0.1
   {% endif %}
 
   # TODO z top check
@@ -360,7 +353,7 @@ gcode:
   SET_VELOCITY_LIMIT ACCEL={original_accel} MINIMUM_CRUISE_RATIO={original_minimum_cruise_ratio}
   
   # Perform flicks
-  {% for wipes in range(1, (n_flicks + cross)) %}
+  {% for flicks in range(1, (n_flicks + cross)) %}
     _RPMR_FLICK_ONCE
   {% endfor %}
   
@@ -368,6 +361,7 @@ gcode:
 
 ##########################################################################################
 # Travels to purge X location and flicks once at flick speed. DON'T INVOKE WITHOUT CLEARANCE
+#
 [gcode_macro _RPMR_FLICK_ONCE]
 gcode:
     G1 X{rpmr.purge_x} F{rpmr.travel_spd_xy}
@@ -405,8 +399,7 @@ gcode:
   RESTORE_GCODE_STATE NAME=rpmr_park_state
 
 ##########################################################################################
-# Increment the blob count with 1 and check if the bucket is full. Pause 
-# the printer if it is.
+# Increment the blob count with 1.
 #
 [gcode_macro _RPMR_COUNT]
 # Don't change these variables
@@ -420,6 +413,7 @@ gcode:
       "RPMR: Blobs in bucket: %s." 
       % (current_blobs + 1)
     )}
+
 ##########################################################################################
 # Reset the blob count to 0
 #
