add underscore to flick macro

--- a/Config/rpmr.cfg
+++ b/Config/rpmr.cfg
@@ -280,7 +280,7 @@ gcode:
         # ==================================================================================
 
         G4 P{pressure_release_time}
-        RPMR_FLICK # N defaults to 1, coincides with name
+        _RPMR_FLICK # N defaults to 1, coincides with name
 
         # Keep track of the # of blobs
         _RPMR_COUNT
@@ -313,14 +313,14 @@ gcode:
   
   SAVE_GCODE_STATE NAME=RPMR_CLEAN_state
   
-  RPMR_FLICK N={rpmr.flick_qty}
+  _RPMR_FLICK N={rpmr.flick_qty}
 
   RESTORE_GCODE_STATE NAME=RPMR_CLEAN_state
 
 
 ##########################################################################################
 # Flicks with the RPMR N times
-[gcode_macro RPMR_FLICK]
+[gcode_macro _RPMR_FLICK]
 gcode:
   {% set rpmr = printer['gcode_macro RPMR'] %}
   {% set original_accel = printer.toolhead.max_accel %}
