fan speed, speed calc fix

--- a/Config/rpmr.cfg
+++ b/Config/rpmr.cfg
@@ -73,7 +73,8 @@ variable_pressure_release_time: 1000
 # from 0 .. 1, or -1 if you don't want it changed.
 #variable_part_cooling_fan: -1              # Leave it unchanged
 #variable_part_cooling_fan:  0              # Disable the fan
-variable_part_cooling_fan:  1               # Run it at full speed
+# variable_part_cooling_fan:  1               # Run it at full speed
+variable_part_cooling_fan:  0.45               # Run it at full speed
 
 # ========================================================================================
 # ==================== PURGE LENGTH TUNING ===============================================
@@ -246,7 +247,6 @@ gcode:
       # Repeat the process until purge_len is reached
       {% for blob in range(blobs) %}
         RESPOND MSG={"'RPMR: Blob %d of %d (%.1fmm)'" % (blob + 1, blobs, purge_per_blob)}
-
         G1 Z{rpm_z_clearance} F{travel_spd_z}
 
 
@@ -257,8 +257,7 @@ gcode:
         {% for pulse in range(pulses_per_blob) %}
           # Calculations to determine e-speed
           # simplified Blobifier equation without variable z motion
-          {% set speed = purge_per_pulse / purge_length_maximum / pulse_duration %}
-
+          {% set speed = purge_per_pulse / pulse_duration %}
           # Purge quickly
           G1 E{purge_per_pulse * 0.95} F{speed * 0.95}
           # Purge a tiny bit slowly
